--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main>
         <img src="logo.png" />
         <p>If you have any questions, comments or suggestions, or if you wish to report any problems you encounter with the app, please write to us.<br><br>We would love to hear your feedback!</p>
-        <a href="mailto:keepreceipt.app@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+        <a href="mailto:support@keepreceipt.app"><i class="fa fa-envelope" aria-hidden="true"></i></a>
     </main>
 </body>
 
